--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: lib/assets/logo.png
+
+  # Adaptive icons (Android 8.0+)
+  #adaptive_icon_foreground: "#FFFFFF" # or assets/brand/icon_foreground.png
+  #adaptive_icon_background: "#6D28D9"   # or assets/brand/icon_background.png
+
+  # Optional platform tweaks
+  remove_alpha_ios: true
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +76,8 @@ flutter:
   assets:
      - lib/assets/logo.png
      - lib/assets/pana.png
+     - lib/assets/pana2.png
+     - lib/assets/pana3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
